# quickly

./: Cargo.toml  README.md
src/: main.rs  preview.rs  state.rs
src/ui/: app.rs  content.rs  dialogs.rs  header.rs  misc.rs  mod.rs  save.rs  source.rs
